_sass/custom.scss
/* Colors broh */
$purp: #E0BBE4;// #998AD3;
$pink: #E494D3;
$green: #C2D5A7; 
$blue: #A3D6D4; 
$ornj: #DF806B;

/* Switch for ascii art on mobile vs. desktop */
pre#banner-mobile { display: inline-block; }
pre#banner-desktop { display: none; }

@media screen and (min-width: 800px) {
  pre#banner-desktop { display: inline-block; }
  pre#banner-mobile { display: none; }
}

pre.ascii-art {
  line-height: 100%;
  padding: 0.5em;
  text-align: initial;
}

.center-wrapper {
  text-align: center;
}

h2 {
  color: $purp;
}

h3 {
  color: $green;
}

h4 {
  text-align: center;
  margin: 1em 0;
}

h4, .ornj {
  color: $ornj;
}

/* Page layout customization */
/**
 * Modifiers & markdown elements
 */
strong, .pink {
 color: $pink; 
}

em, .green {
 color: $green;
}

a, .blue {
 color: $blue;
}

code, .purp {
 color: $purp; 
}

h1.center {
  font-size: 4em; 
  margin: auto; 
  text-align: center; 
}

p.center {
  text-align: center;
}

.menu > ul.mini {
  text-align: left;
}

.selector li::before {
  content: "" !important;
}

.selector a {
  text-decoration: none;
}

.selector li:hover, .selector li:hover > a {
  color: var(--background-color);
  background-color: var(--base-color);
}


/**
 * Images
 */
img {
 border-radius: 0.5em; 
}

img.right {
 float: right; 
}

img.center {
 margin: auto; 
 display: block; 
}

img.small {
 width: 5em; 
}


@media screen and (min-width: 800px) {
  img.small {
   width: 20em; 
  }
}

/**
 * Boxes and things
 */
a.wrapper:hover {
  background-color: var(--background-color);
  color: var(--base-color);
}

div.account-item {
  display: inline-block;
}

.hidden {
  display: none;
}

div.project {
  margin: 1em;
  display: flex;
  align-items: center;
  justify-items: center;
  flex-direction: column;
}

img.project-img {
  margin: 1em;
}

div.project-header {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

div.project-links {
  display: flex;
  width: 100%;
  flex-direction: row;
  justify-content: space-around;
}

div.project-links > a {
  display: inline-block;
  text-decoration: none;
  padding: 0 0.5em;
  color: $pink;
}

h3.project-title {
  color: $purp;
  margin: 0;
}

.project-tagline {
  font-style: italic;
  color: $green;
  margin: 0;
}


@media screen and (min-width: 800px) {
  div.project.left {
    flex-direction: row;
  }

  div.project.right {
    flex-direction: row-reverse;
  }

  div.project-header {
    flex-direction: row; 
  }

  div.project-links {
    width: 40%;
  }
}

/* Homepage styles */
div#terminal {
  width: 100%;
  min-height: 2em;
  color: #fff;
  padding: 0 4em;
}

#scroll-indicator {
  position: fixed;
  bottom: 7em;
}

#scroll-indicator-content {
  background: #fff;
  color: var(--background-color);
}

#bg-canvas {
  position: absolute;
  z-index: 0;
  width: 100vw;
  height: 100vh;
  margin-top: -1em;
}

p.left-blank {
  margin-top: 10em;
}

#home-content {
  margin: 0 4em;
}

